testsuite/tests/libraries/should_compile/lib001.alan
output():proc
{
  writeInteger(42);
  writeByte('t');
  writeChar('\x42');
  writeString("Ilias\n");
}
