testsuite/tests/libraries/should_fail/libfail001.alan
output():proc
{
  writeInteger('t');
  writeInteger("123");

  writeByte(42);
  writeByte("123");

  writeChar(42);
  writeChar("123");

  writeString(42);
  writeString('t');
}
